--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -9,7 +9,6 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/anchor_blog?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
 
-
 # 日志配置
 logging:
   level:
@@ -26,3 +25,16 @@ logging:
       # 开启启动清除
       clean-history-on-start: true
       max-file-size: 10MB
+
+# MyBatis-plus
+mybatis-plus:
+  global-config:
+    db-config:
+      logic-delete-field: deleted
+      logic-delete-value: 1
+      logic-not-delete-value: 0
+    # 控制台打印mybatis-plus的LOGO
+    banner: false
+
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
